# astroinspect

./: .gitignore  404.html  CITATION.bib  CITATION.cff  CNAME  Pipfile  README.md  index.html  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  site.webmanifest  test.html  vercel.json  xtable.html
.github/workflows/: pages.yml
404/: index.html
ai/: index.html
aml/: README.md  wsgi.py
aml/nginx/: aml
aml/systemd/: aml.service
api/: index.py
app/: App.tsx
app/@types/: AppbarButton.d.ts  DropdownMenu.d.ts  NotificationsContext.d.ts  TableSummary.d.ts  columnDropdown.d.ts  configContext.d.ts  modules.d.ts  resourceFetch.d.ts  sdss.d.ts
app/common/: AppNavbar.tsx  Chip.tsx
app/contexts/: ColorMode.tsx  NotificationsContext.tsx  SAMPContext.tsx  XTableConfigContext.tsx  XTableDataContext.tsx
app/hooks/: useColDefs.tsx  useFocus.tsx
app/interfaces/: contextActions.ts
app/lib/: Emitter.ts  Semaphore.ts  TableHelper.ts  basereader.ts  csv.ts  gtag.ts  (+7 more)
classifications/: index.html
contexts/: XTableConfigContext.tsx  XTableDataContext.tsx
examples/: galaxyzoo-medium-sample.csv  galaxyzoo-small-sample.csv
images/: index.html
lib/: Semaphore.ts  TableDataManager.ts  TableHelper.ts  utils.ts
load/: index.html
pages/: _app.tsx  _document.tsx  index.tsx  xtable.tsx
plots/: index.html
public/: sw.js  sw_v2.js
sdss-catalog/: index.html
sed/: index.html
services/: LegacyService.ts  SdssService.ts  SplusService.ts
skyviewer/: index.html
styles/: ButtonChip.module.css  Chip.module.css
table/: index.html
(+500 files in other folders)
