[project]
name = "astroinspect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "matplotlib>=3.10.5",
    "python-dotenv==0.21.0",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
]
